// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders correctly with size: Sized Spinner 1`] = `
<DocumentFragment>
  <div
    class="chakra-spinner css-1n0uu9w"
    data-testid="spinner"
  >
    <span
      class="css-8b45rq"
    >
      Loading...
    </span>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Spinner /> renders correctly: Default Spinner 1`] = `
<DocumentFragment>
  <div
    class="chakra-spinner css-6dnz8x"
    data-testid="spinner"
  >
    <span
      class="css-8b45rq"
    >
      Loading...
    </span>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
